tests/snapshots/test_runner__tests__compiler__intepret__conditional1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  grade: score: {
    score < 40: #F,
    score < 60: #C,
    score < 80: #B,
  } else #A,

  81 | grade | print,
  61 | grade | print,
  41 | grade | print,
  21 | grade | print,
}

============
EXIT CODE
============
0

============
STDOUT
============
#A
#B
#C
#F

============
STDERR
============
