tests/snapshots/test_runner__tests__compiler__intepret__effectHandlers2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  run: ``
    | f
    handle {
        ? : n match {
             a `ok` ``:
             a | resume,
             e `err` ``: e `err` ``,
          } <- n,
    }
    <- f,

  ("oh no" `err` `` ! ?) + (2 `ok` `` ! ?) <- `` | run | print,

  (1 `ok` `` ! ?) + (2 `ok` `` ! ?) <- `` | run | print,
}

============
EXIT CODE
============
0

============
STDOUT
============
"oh no" `err` ``
3

============
STDERR
============
