tests/snapshots/test_runner__tests__compiler__intepret__effectHandlers3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// async await
(
  run: {
    f: () | f handle (
      await : {
        promise: resume | promise
      }
    )
  },

  {
    (
      x: `tests/compiler/intepret/basic1.kk` | readFile ! await,
      y: `tests/compiler/intepret/effectHandlers3.kk` | readFile ! await,
      x | print,
      y | print
    )
  } | run,
)

============
EXIT CODE
============
0

============
STDOUT
============
``hello world` | print
`
`// async await
(
  run: {
    f: () | f handle (
      await : {
        promise: resume | promise
      }
    )
  },

  {
    (
      x: `tests/compiler/intepret/basic1.kk` | readFile ! await,
      y: `tests/compiler/intepret/effectHandlers3.kk` | readFile ! await,
      x | print,
      y | print
    )
  } | run,
)

`

============
STDERR
============
