tests/snapshots/test_runner__tests__compiler__intepret__emptyFunction1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
(
  f: {`hello world` | print},

  `yoyo` | print,

  () | f

  // Expect `yoyo` is printed before `hello world`
)

============
EXIT CODE
============
0

============
STDOUT
============
`yoyo`
`hello world`

============
STDERR
============
