tests/snapshots/test_runner__tests__compiler__intepret__functionCurry2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
(
  // This is inspired by APL Over operator (https://aplwiki.com/wiki/Over)
  over: {f: {g: {a: {b: (a | f) g (b | f)}}}},
  square: {a: a * a},

  // Sum of squares
  3 (+ over square) 4 | print,

  // Product of squares
  3 (* over square) 4 | print,

)

============
EXIT CODE
============
0

============
STDOUT
============
25
144

============
STDERR
============
