tests/snapshots/test_runner__tests__compiler__intepret__match1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// I think a separator operator is necessary to reduce usage of parentheses
(
  area: {
    (side,) 'square' ():
      side * side,

    (width, height) 'rectangle' ():
      width * height
  },

 (side: 10) 'square' () | area | print,

  (width: 7, height: 3) 'rectangle' () | area | print,
)

============
EXIT CODE
============
0

============
STDOUT
============
100
21

============
STDERR
============
